trying to fix mobile form on iphone

--- a/src/styles/JobContainer.module.css
+++ b/src/styles/JobContainer.module.css
@@ -148,12 +148,6 @@
     }
 
     .container, .previewContainer {
-      /*  
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-    */
         display: grid;
         grid-template-columns: auto 1fr;
         grid-template-rows: auto;
@@ -177,6 +171,7 @@
         align-self: center;
         width: 50px !important;
         height: 50px !important;
+        overflow: hidden;
     }
 
 
